@@ -47,7 +47,7 @@ MAKEOP(X, Y) ==
 
 init_parser_properties() ==
     for j in _
-         [["*", 800, 801],   ["rem", 800, 801],   ["mod", 800, 801], _
+         [["*", 800, 801],   ["rem", 800, 801], _
           ["quo", 800, 801], _
           ["/", 800, 801],    ["**", 901, 900],  ["^", 901, 900], _
           ["exquo", 800, 801], ["+", 700, 701], _
