@@ -1,3 +1,9 @@
+2013-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/s-parser.boot, src/interp/macros.lisp,
+	src/interp/property.lisp, src/interp/postpar.boot:
+	Minor cleanups.
+
 2012-12-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* *: More renames of 'Axiom' to 'FriCAS'.
